<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:dialogTitle="Minimum Magnitude"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:summary="Select Minimum Magnitude"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_earthquake_default"
        android:dialogTitle="Number of Earthquake"
        android:inputType="number"
        android:key="@string/settings_no_of_earthquake_key"
        android:summary="Select Number of Earthquake"
        android:title="@string/settings_no_of_earthquake_label" />

    <ListPreference
        android:title="@string/settings_order_by_label"
        android:summary="Descending/Ascending"
        android:key="@string/settings_order_by_key"
        android:defaultValue="Descending"
        android:entries="@array/orderByEntries"
        android:entryValues="@array/orderByValues"/>

</PreferenceScreen>